<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Birdfeed</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Log in to Twitter</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="sample_username">\@foo</string>
    <string name="sample_body">This is a tweet body</string>
    <string name="sample_timestamp">1 hr ago</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_tweet">Tweet</string>
    <string name="hint_tweet">What\'s happening?</string>
    <string name="label_counter">140 chars left</string>
    <string name="sample_fullname">Jane Smith</string>
    <string name="title_activity_tweet_detail">TweetDetailActivity</string>
    <string name="description_profilePic">User Profile Picture</string>
    <string name="description_background">Background Image</string>
    <string name="title_retweet">Retweet</string>
    <string name="title_favorites">Favorites</string>
    <string name="placeholder_number">203</string>
    <string name="title_reply">Reply?</string>
    <string name="btn_reply">Reply</string>

</resources>